# ai-agents-course

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  conftest.py  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
projects/01-llm-service/: README.md
projects/02-extract-service/: README.md
projects/03-knowledge-bot/: README.md
projects/04-ops-agent/: README.md
projects/05-triage-agent/: README.md
projects/07-capstone/: README.md
templates/: case-study.md  course-dashboard.md  positioning.md  progress.md
tests/: test_smoke.py
